fix weirdness with nav on mobile

--- a/css/layout.less
+++ b/css/layout.less
@@ -58,7 +58,7 @@ nav {
 
 #topNav {
   .has-nav-height;
-  width: 100%;
+  width: 100vw;
   background-color: @top-nav-background;
   position: relative;
   z-index: 10;
